Fixed size/spacing of the show barchart genre select

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,11 @@ button {
     font-size: 12pt;
 }
 
+#show-genre-select-wrapper .fstdiv {
+    width: 85%;
+    margin: auto;
+}
+
 /*.chosen-single {*/
     /*height: 40px;*/
 /*}*/
